[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/weapons/pistol/pistol.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/player/weapons/weapon_pistol.gd" type="Script" id=2]
[ext_resource path="res://scenes/player/weapons/muzzle_flash.tscn" type="PackedScene" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Equip"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("CenterAnchor:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( -90, 0, 0 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Unequip"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("CenterAnchor:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 90, 0, 0 ) ]
}

[node name="WeaponPistol" type="Spatial"]
script = ExtResource( 2 )
impact_effect = ExtResource( 3 )

[node name="CenterAnchor" type="Spatial" parent="."]

[node name="MuzzleFlash" parent="CenterAnchor" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.233809, -0.0350194, 0.51781 )

[node name="Pistol" parent="CenterAnchor" instance=ExtResource( 1 )]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, -0.234, -0.08, 0.328 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Equip = SubResource( 1 )
anims/Unequip = SubResource( 2 )
[connection signal="animation_finished" from="CenterAnchor/Pistol/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[editable path="CenterAnchor/Pistol"]
